[TASK] Widget overflow fix (RT-3113)

--- a/src/less/ripple/tabs.less
+++ b/src/less/ripple/tabs.less
@@ -379,7 +379,7 @@
     position: relative;
 
     .auth-attention {
-      margin-top: 90px;
+      margin-top: 30px;
       text-align: center;
 
       .recovery {
